Banner padding avoid midsize screen cutoff

--- a/src/assets/scss/deprecated/_deprecated.scss
+++ b/src/assets/scss/deprecated/_deprecated.scss
@@ -295,7 +295,7 @@ button.hrs-button-white {
 		background-color: rgba(255, 255, 255, .9);
 		color: $brand-crimson;
 		font-weight: 600;
-		padding: 1rem 2rem;
+		padding: .25rem 1rem;
 	}
 
 	.builder-banner-inner-content {
